force-app/main/default/objects/NTB_Sales__c/NTB_Sales__c.object-meta.xml
<CustomObject>
    <label>日東紡マテ_ビジネスシート</label>
    <nameField>
        <label>ビジネスシートコード文字列</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>