force-app/main/default/objects/NTB_Sales__c/fields/Field110__c.field-meta.xml
<CustomField>
    <fullName>Field110__c</fullName>
    <label>次回訪問日</label>
    <length>255</length>
    <type>Text</type>
</CustomField>