force-app/main/default/objects/NTB_Sales__c/fields/Field179__c.field-meta.xml
<CustomField>
    <fullName>Field179__c</fullName>
    <label>自社担当部署</label>
    <length>255</length>
    <type>Text</type>
</CustomField>