force-app/main/default/objects/NTB_Sales__c/fields/Field200__c.field-meta.xml
<CustomField>
    <fullName>Field200__c</fullName>
    <label>自社担当者社員番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>