force-app/main/default/objects/NTB_Sales__c/fields/Field754_1__c.field-meta.xml
<CustomField>
    <fullName>Field754_1__c</fullName>
    <label>最新活動内容</label>
    <length>255</length>
    <type>Text</type>
</CustomField>