force-app/main/default/objects/NTB_Sales__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Field338__c</columns>
    <columns>Field455__c</columns>
    <columns>Field922__c</columns>
    <columns>Field708__c</columns>
    <columns>Field229__c</columns>
    <columns>Field291__c</columns>
    <columns>Field963__c</columns>
    <columns>Field325__c</columns>
    <columns>Field500__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべてのレコード</label>
</ListView>